# ProjetoPowerBi

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3ade4b4e28d4_tabelas_esportivas_permitindo_nulos.py  a82ba19633a9_criacao_das_tabelas_permitindo_nulos.py
src/: database.py  generate_fact.py  models.py  populate.py
src/visualizations/: plot_volume.py
tests/: test_geradores.py
