[project]
name = "projeto-powerbi"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiuri Selzler",email = "hiuriselzler0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "faker (>=40.15.0,<41.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.7,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
